// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message PubsubBetaTopic {
  string name = 1;
  string kms_key_name = 2;
  map<string, string> labels = 3;
  PubsubBetaTopicMessageStoragePolicy message_storage_policy = 4;
  string project = 5;
}

message PubsubBetaTopicMessageStoragePolicy {
  repeated string allowed_persistence_regions = 1;
}

message ApplyPubsubBetaTopicRequest {
  PubsubBetaTopic resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeletePubsubBetaTopicRequest {
  string service_account_file = 1;
  PubsubBetaTopic resource = 2;
}

message ListPubsubBetaTopicRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListPubsubBetaTopicResponse {
  repeated PubsubBetaTopic items = 1;
}

service PubsubBetaTopicService {
  rpc ApplyPubsubBetaTopic(ApplyPubsubBetaTopicRequest) returns (PubsubBetaTopic);
  rpc DeletePubsubBetaTopic(DeletePubsubBetaTopicRequest) returns (google.protobuf.Empty);
  rpc ListPubsubBetaTopic(ListPubsubBetaTopicRequest) returns (ListPubsubBetaTopicResponse);
}
